<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="faruqisan.thekost.CreateKostActivity">

    <EditText
        android:id="@+id/etInputKostName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/label_kost_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnPickLocation"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:text="@string/label_find_location"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputKostName" />

    <EditText
        android:id="@+id/etKostLocation"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_kost_location"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputKostName"
        app:layout_constraintRight_toLeftOf="@+id/btnPickLocation"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSaveKost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

</android.support.constraint.ConstraintLayout>
