<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_background"
    tools:context="faruqisan.thekost.RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_signup"
        android:textColor="@color/icon"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="344dp"
        android:layout_height="45dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/icon"
        android:textColorHint="@color/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/icon"
        android:textColorHint="@color/icon"
        android:background="@drawable/background_edit_text"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:textColor="@color/icon"
        android:textColorHint="@color/icon"
        android:background="@drawable/background_edit_text"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignupEmail"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnProcessSignup"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button_transparent"
        android:elevation="0dp"
        android:text="@string/label_signup"
        android:textColor="@color/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignupPassword" />

    <ProgressBar
        android:id="@+id/pbSignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProcessSignup"
        tools:visibility="invisible" />

</android.support.constraint.ConstraintLayout>
